Fix menu z-index

--- a/apps/components_guide_web/assets/css/app.css
+++ b/apps/components_guide_web/assets/css/app.css
@@ -15,6 +15,8 @@
   --link--color: var(--theme-primary, currentColor);
   --link--decoration: none;
   --link--decoration--hover: initial;
+  
+  --z-menu: 50;
 }
 
 a:not([class]) {
@@ -276,7 +278,7 @@ details[open] summary[aria-haspopup="menu"]:before {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 80;
+  z-index: calc(var(--z-menu) - 1);
   display: block;
   cursor: default;
   content: " ";
